# kaig

./: .gitignore  AGENTS.md  Justfile  README.md  TODO.md  history.txt  pyproject.toml  skills-lock.json
.claude/skills/: ccc
.cursor/: worktrees.json
.cursor/rules/: surrealdb-js.mdc
.zed/: settings.json
demo/: .gitignore  Cargo.toml  README.md  docker-compose.yml
demo/src/: db.rs  main.rs  state.rs
demo/src/handlers/: embed.rs  generate.rs  mod.rs
demo/surql/: api.surql  demo.surql
docs/: 01-surql-intro.surql  02-surql-advanced.surql  03-surql-vector.surql  04-surql-graph.surql  05-surql-vars.surql  TODO.md  embedding-models-notes.md  geo.surql  index.md  inference-analytics.surql  llm-generated-ecomm-demo.surql  surql-intro.surql
docs/assets/: yoga-mat-manual.md
embedding-server/: Cargo.toml  README.md
embedding-server/src/: db.rs
embedding-server/src/handlers/: embed.rs  generate.rs  mod.rs
embedding-server/surql/: api-search-vector.surql  demo.surql
examples/demo-graph/: zellij-layout.kdl
examples/demo-graph/src/demo_graph/: main.py  models.py
examples/demo-ingest-throttled/: Justfile  TODO.md  pyproject.toml
examples/demo-ingest-throttled/src/demo_ingest_throttled/: __init__.py  ingest.py
examples/demo-ingest-throttled/src/demo_ingest_throttled/surql/: populate_categories.surql
examples/demo-simple/: main.py  pyproject.toml
examples/knowledge-graph/: README.md  TODO.md  agent.py  ingest.py  pyproject.toml  search.py
examples/knowledge-graph/api/: bruno.json  query.bru  upload file.bru
examples/knowledge-graph/db/: __init__.py  definitions.py
examples/knowledge-graph/ingestion/: __init__.py  chunk.py  utils.py
examples/knowledge-graph/ingestion/deprecated/: inference.py  summarize.py
examples/knowledge-graph/ingestion/extraction/: kreuzberg_converter.py
examples/knowledge-graph/src/knowledge-graph/: agent.py  db.py  definitions.py  ingestion.py  search.py  server.py
examples/knowledge-graph/src/knowledge-graph/conversion/: __init__.py
examples/knowledge-graph/src/knowledge-graph/conversion/providers/: __init__.py  kreuzberg_converter.py
examples/knowledge-graph/src/knowledge-graph/conversion/providers/docling/: __init__.py
examples/knowledge-graph/src/knowledge-graph/flow/: README.md  __init__.py  definitions.py  executor.py
examples/knowledge-graph/src/knowledge-graph/flow/tests/: flow_test.py
examples/knowledge-graph/src/knowledge_graph/: agent.py  db.py  definitions.py  ingest.py  ingestion.py  search.py  server.py  utils.py
examples/knowledge-graph/src/knowledge_graph/conversion/: definitions.py
examples/knowledge-graph/src/knowledge_graph/extraction/: __init__.py  definitions.py  example.py  kreuzberg_converter.py
examples/knowledge-graph/src/knowledge_graph/extraction/providers/: __init__.py
examples/knowledge-graph/src/knowledge_graph/extraction/providers/docling/: __init__.py
examples/knowledge-graph/src/knowledge_graph/extraction/providers/kreuzberg/: example.py  kreuzberg_converter.py
examples/knowledge-graph/src/knowledge_graph/flow/: README.md  __init__.py  definitions.py  executor.py
examples/knowledge-graph/src/knowledge_graph/flow/tests/: flow_test.py
examples/knowledge-graph/src/knowledge_graph/handlers/: __init__.py  chunk.py  inference.py  summarize.py  upload.py
examples/knowledge-graph/src/knowledge_graph/ingestion/: documents.DEPRECATED.py  files.py  markdown.py
examples/knowledge-graph/surql/: flow.surql  schema.surql  search_chunks.surql  search_concepts.surql
examples/knowledge-graph/surql/functions/: embed.surql
examples/knowledge-graph/surql/seed/: params.surql  products.surql  reviews.surql  users.surql
examples/knowledge-graph/surql/tables/: category.surql  order.surql  product.surql  rel_product_in_order.surql  review.surql  user.surql
examples/knowledge-graph/tools/: deps.py  docs.py  ecomm.py  fs.py  query_db.py  run_surql.py  similarity.py
examples/knowledge-graph/tools/examples/: query_db.surql
examples/notebooks/: benchmarks.py  vector_search.py
examples/notebooks/data/: data.json
kaig-app/: .env.example  README.md  package.json  svelte.config.js
kaig-app/migrations/: .gitignore  V1__params.example.surql  V2__users.surql  V3__record_access.surql  V4__messages.surql  V5__files.surql  V6__keywords.surql  V7__chunks.surql  V8__file_delete_event.surql
kaig-app/scripts/: migrate.ts
kaig-app/src/: app.html
kaig-app/src/lib/: surreal.ts
kaig-app/src/lib/api/: user.ts
kaig-app/src/lib/components/: app-sidebar.svelte  create-folder.svelte  graph-canvas.svelte  graph-ecomm.svelte  graph.svelte  login-form.svelte  move-file.svelte  upload-form.svelte
kaig-app/src/lib/models/: user.ts
kaig-app/src/lib/server/: auth.ts  config.ts  db.ts
kaig-app/src/lib/stores/: auth.ts
kaig-app/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
kaig-app/src/routes/files/: +page.svelte
kaig-app/src/routes/login/: +page.svelte
kaig-app/src/routes/products/: +page.svelte
kaig-app/src/routes/user/: +page.svelte
server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/handlers/: mod.rs
src/demo/: __init__.py  db.py
src/demo/handlers/: ingest.py
src/demo_graph_rag_gaming/: __init__.py  db.py  embeddings.py  ingest.py  models.py  pipeline.py  query.py  utils.py
src/demo_graph_rag_gaming/handlers/: categories.py  embeddings.py  ingest.py  query.py
src/kai_graphora/: __init__.py  db.py  llm.py  models.py
src/kai_graphora/db/: __init__.py  definitions.py  utils.py
src/kai_graphora/handlers/: categories.py  embeddings.py  query.py
src/kai_graphora/surql/: create_indexes.surql  graph_query_in.surql  graph_siblings.surql  query_embeddings.surql
src/kai_graphora/tests/: llm_test.py
src/kaig/: definitions.py  embeddings.py  llm.py
src/kaig/db/: __init__.py  definitions.py  queries.py  utils.py
src/kaig/flow/: executor.py
src/kaig/prompts/: __init__.py  text_to_surql.py
src/kaig/tests/: db_utils_coerce_test.py  llm_test.py
surql/: api.surql  create_indexes.surql  query_embeddings.surql
(+20 files in other folders)
