[project]
name = "kaig"
version = "0.1.0"
description = "Hi! My name is Kai G. I'm a knowledge AI, skilled in vector search, and graph RAG. My DB of choice is SurrealDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.1",
    "pydantic>=2.11.4",
    "sentence-transformers>=4.1.0",
    "surrealdb>=1.0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "ty>=0.0.1a3",
    "demo-graph",
    "demo-ingest-throttled",
    "notebooks",
    "pytest>=8.4.0",
    "pyright>=1.1.403",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
demo-graph = { workspace = true }
demo-ingest-throttled = { workspace = true }
notebooks = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.pyright]
venvPath = "."
venv = ".venv"
