[project]
name = "kaig"
version = "0.1.0"
description = "Hi! My name is Kai G. I'm a knowledge AI, skilled in vector search, and graph RAG. My DB of choice is SurrealDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.1",
    "openai>=2.8.1",
    "pydantic>=2.11.4",
    "sentence-transformers>=4.1.0",
    "surrealdb>=1.0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "demo-graph",
    "demo-ingest-throttled",
    "logfire",
    "notebooks",
    "pytest>=8.4.0",
    "ipykernel>=6.30.1",
    "ty>=0.0.1a31",
    "basedpyright>=1.34.0",
]

[tool.uv.sources]
demo-graph = { workspace = true }
demo-ingest-throttled = { workspace = true }
notebooks = { workspace = true }
logfire = { git = "https://github.com/pydantic/logfire" }
# surrealdb = { git = "https://github.com/surrealdb/surrealdb.py", branch = "feat/migrate-cerberus-to-pydantic" }

[tool.uv.workspace]
members = ["examples/*"]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
