[project]
name = "kaig"
version = "0.1.0"
description = "Hi! My name is Kai G. I'm a knowledge AI, skilled in vector search, and graph RAG. My DB of choice is SurrealDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.3.0",
    "surrealdb>=1.0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "demo-graph",
    "logfire",
    "notebooks",
    "pytest>=9.0.2",
    "ipykernel>=7.2.0",
    "ty>=0.0.23",
    "basedpyright>=1.38.3",
]

[tool.uv.sources]
demo-graph = { workspace = true }
notebooks = { workspace = true }
logfire = { git = "https://github.com/pydantic/logfire" }
# surrealdb = { git = "https://github.com/surrealdb/surrealdb.py", branch = "feat/migrate-cerberus-to-pydantic" }

[tool.uv.workspace]
members = ["examples/*"]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
