[project]
name = "demo-ingest-throttled"
version = "0.1.0"
description = "Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.2.0", "pydantic>=2.11.4", "kaig"]

[project.scripts]
demo-ingest-throttled = "demo_ingest_throttled:cli"

[tool.uv.sources]
kaig = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
