[project]
name = "knowledge-graph"
version = "0.1.0"
description = "This example covers ingestion of PDF files into a knowledge graph, and a chat UI to ask questions to an AI agent."
readme = "README.md"
authors = [
    { name = "Martin Schaer", email = "martin.schaer@surrealdb.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docling>=2.80.0",
    "kaig",
    "kreuzberg[keywords-all]>=4.4.6",
    "logfire",
    "pydantic-ai-slim[openai]>=1.70.0",
    "tiktoken>=0.12.0"
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
kaig = { workspace = true }

[tool.basedpyright]
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
