[project]
name = "knowledge-graph"
version = "0.1.0"
description = "This example covers ingestion of PDF files into a knowledge graph, and a chat UI to ask questions to an AI agent."
readme = "README.md"
authors = [
    { name = "Martin Schaer", email = "martin.schaer@surrealdb.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kaig",
    "kreuzberg[keywords-all]>=4.4.6",
    "logfire",
    "pydantic-ai-slim[openai,web]>=1.70.0",
]

[tool.uv.sources]
kaig = { workspace = true }

[tool.basedpyright]
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
